Ignore numeric literals cop.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,8 @@ Style/ConditionalAssignment:
   Enabled: false
 Style/IfUnlessModifier:
   Enabled: false
+Style/NumericLiterals:
+  Enabled: false
 Layout/EmptyLineAfterGuardClause:
   Enabled: false
 Layout/CaseIndentation:
