--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,6 +43,8 @@ Metrics/CyclomaticComplexity:
   Enabled: false
 Metrics/PerceivedComplexity:
   Enabled: false
+Naming/AccessorMethodName:
+  Enabled: false
 Naming/RescuedExceptionsVariableName:
   PreferredName: 'err'
 Naming/FileName:
