--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,10 @@ Lint/AssignmentInCondition:
 Layout/HashAlignment:
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
+Layout/SpaceInsideHashLiteralBraces:
+  Enabled: false
+Style/HashSyntax:
+  EnforcedStyle: hash_rockets
 Style/MethodCallWithoutArgsParentheses:
   Enabled: false
 Style/NumericPredicate:
