Exclude examples files for rubocop.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,7 @@ AllCops:
   - 'sys-admin.gemspec'
   - 'Rakefile'
   - 'Gemfile'
+  - 'examples/*.rb'
 Lint/AssignmentInCondition:
   Enabled: false
 Layout/HashAlignment:
