--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,6 +35,8 @@ Style/ClassAndModuleChildren:
   Enabled: false
 Style/ConditionalAssignment:
   Enabled: false
+Style/IfInsideElse:
+  Enabled: false
 Style/IfUnlessModifier:
   Enabled: false
 Style/NumericLiterals:
