Let's disable the frozen string comment for this repo.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,6 +35,8 @@ Style/ClassAndModuleChildren:
   Enabled: false
 Style/ConditionalAssignment:
   Enabled: false
+Style/FrozenStringLiteralComment:
+  Enabled: false
 Style/IfInsideElse:
   Enabled: false
 Style/IfUnlessModifier:
