Ignore sunos code, it's basically dead.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,6 +18,7 @@ AllCops:
   - 'Rakefile'
   - 'Gemfile'
   - 'examples/*.rb'
+  - 'lib/sunos/sys/admin.rb'
 Lint/AssignmentInCondition:
   Enabled: false
 Layout/HashAlignment:
