--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,8 @@ RSpec/FilePath:
   SpecSuffixOnly: true
 RSpec/InstanceVariable:
   Enabled: false
+RSpec/ExampleLength:
+  Max: 10
 RSpec/BeforeAfterAll:
   Enabled: false
 
