--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,8 @@ RSpec/ExampleLength:
   Max: 10
 RSpec/BeforeAfterAll:
   Enabled: false
+RSpec/SpecFilePathFormat:
+  Enabled: false
 
 AllCops:
   NewCops: enable
@@ -45,6 +47,8 @@ Style/IfInsideElse:
 Style/IfUnlessModifier:
   Enabled: false
 Style/NumericLiterals:
+  Enabled: false
+Style/NegatedIfElseCondition:
   Enabled: false
 Layout/EmptyLineAfterGuardClause:
   Enabled: false
